Fixed home button on small screen

--- a/css/app.css
+++ b/css/app.css
@@ -115,7 +115,8 @@ body {
   top: 0;
   height: 100vh;
   width: 100vh;
-  position: absolute;
+  position: relative;
+  display: block;
 }
 
 .main {
@@ -636,18 +637,19 @@ body {
     }
 
     .curtain-menu-button {
-      position: inherit;
-      right: 80%;
+      position: fixed;
+      top: -28px;
+      left: 80%;
    }   
 
     .curtain-menu-button i {
       position: inherit;
-      transform: translate(50%, 50%);
+      transform: translate(60%, 50%);
    }   
 
     #home {
-      height: 50%;
-      display: block;
+      visibility: hidden;
+      display: none;
     }
 
   }
